fix bootRun