@@ -39,6 +39,10 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += '--enable-preview'
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
